--- a/public/index.html
+++ b/public/index.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="https://assets.uits.iu.edu/css/rivet/1.8.3/rivet.min.css">
   <link rel="stylesheet" href="styles/app.css">
-  <title>eLearning Demo</title>
+  <title>eLearning Development Demo</title>
 </head>
 <body>
 <header class="rvt-header" role="banner">
@@ -19,7 +19,7 @@
     </svg>
   </div>
   <span class="rvt-header__title">
-            <a href="#0">eLearning Demo</a>
+            <a href="#0">eLearning Development Demo</a>
         </span>
 </header>
 <main role="main" id="main-content">
