--- a/public/index.html
+++ b/public/index.html
@@ -1,14 +1,17 @@
 <!DOCTYPE html>
 <html lang="en-US">
-<head>
-  <meta charset="utf-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="https://assets.uits.iu.edu/css/rivet/1.8.3/rivet.min.css">
-  <link rel="stylesheet" href="styles/app.css">
-  <title>eLearning Development Demo</title>
-</head>
-<body>
-  <div id="root"></div>
-</body>
+  <head>
+    <meta charset="utf-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link
+      rel="stylesheet"
+      href="https://assets.uits.iu.edu/css/rivet/1.8.3/rivet.min.css"
+    />
+    <link rel="stylesheet" href="styles/app.css" />
+    <title>eLearning Development Demo</title>
+  </head>
+  <body>
+    <div id="root"></div>
+  </body>
 </html>
